# dotfiles

./: .gitignore  .gitmodules  README.md  aichat-config.yaml  condarc  config.fish  gitconfig  gitignore  latexmkrc  lazygit.yml  tmux.conf  zlogin  zshenv  zshrc
gui/: alacritty.toml  conky-leibniz.lua  i3-config  mimeapps.list  rofi.rasi  sway-config  xinitrc
gui/kitty/: kitty.conf
gui/wezterm/: wezterm.lua
nvim/: init.lua
nvim/after/ftplugin/: lua.lua  markdown.lua  python.lua  tex.lua
nvim/lua/: basic_keymaps.lua  fzf-bibtex_config.lua  helper_funcs.lua  keymaps_sans_plugins.lua  lsp_after_attach.lua  texlab_setup.lua  vim-options.lua
nvim/lua/plugins/: assistants.lua  autocompletion.lua  color-scheme.lua  color-theme.lua  completion.lua  debugger.lua  (+21 more)
nvim/snippets/: package.json
scripts/: .envrc  assistant_coding.py  assistant_online-search.py  assistant_reasoning.py  assistant_revise-prose.py  batsignal.service  batsignal.service.d  clone-and-update-conda-env.sh  code.py  code_assistant.py  create-term-scratchpad-window.sh  file_convert-to-pdf.sh  file_extract-pdftext.py  fzf_files_and_dirs.sh  git_add-cloud-remote.sh  headless_insync.service  i3_create-new-workspace.sh  load_conda.sh  online_search.py  pyproject.toml  revise_prose.py  run_rg.sh  sway_create-new-workspace.sh  sway_mirror-screen.sh  symlink_config.py  term_interactive-zoxide.sh  term_scratchpad.sh  update-pip-pkgs-from-conda-yaml-file.py  update-pip-pkgs-from-conda-yaml-file.sh
yazi/: keymap.toml  yazi.toml
zshrc.d/: aliases.zsh  better_defaults.zsh  completion.zsh  prompt.zsh
(+1 files in other folders)
