[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.45.2",
    "argparse>=1.4.0",
    "ipython>=8.32.0",
    "openai>=1.61.0",
    "pathlib>=1.0.1",
    "pymupdf>=1.25.2",
    "requests>=2.32.3",
    "rich>=13.9.4",
]
